tests/instantiating/invalid/doc_property_invalid_type/bus.fbd
main bus
	foo status
		doc = 1
